# fourier

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  ciyml  ffi.yml  no_std.yml
fft/: Cargo.toml
fft-bench/: Cargo.toml
fft-bench/benches/: fft_bench.rs
fft-prof/: Cargo.toml
fft-prof/src/: main.rs
fft/src/: avx.rs  fft.rs  float.rs  generic.rs  lib.rs  macros.rs  twiddle.rs
fft/src/autosort/: butterfly.rs  mod.rs  pow2.rs  prime_factor.rs  radix2.rs  radix4.rs  radix8.rs  stage.rs
fft/src/operations/: avx.rs  generic.rs  mod.rs  radix2.rs  radix3.rs  radix4.rs  radix8.rs  vector.rs
fft/src/vector/: avx.rs  generic.rs  mod.rs
fft/tests/: vectors.rs
fft/tests/vectors/: 12.json  128.json  36.json  8.json
fourier/: Cargo.toml
fourier-algorithms/: Cargo.toml  README.md
fourier-algorithms/src/: array.rs  bluesteins.rs  fft.rs  float.rs  identity.rs  lib.rs  split_radix.rs  twiddle.rs
fourier-algorithms/src/autosort/: avx_optimization.rs  butterfly.rs  mod.rs  pow2.rs
fourier-algorithms/src/vector/: avx.rs  generic.rs
fourier-bench/: Cargo.toml  README.md
fourier-bench/benches/: fft_bench.rs
fourier-ffi/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  config.toml  makefile  test.c  test.cpp
fourier-ffi/include/: fourier.h
fourier-ffi/src/: lib.rs
fourier-ffi/test_c/: main.c  main.cpp
fourier-macros/: Cargo.toml  README.md
fourier-macros/src/: lib.rs
fourier-new/: Cargo.toml  storage.rs
fourier-new/src/: autosort.rs  bluesteins.rs  lib.rs  scalar.rs  twiddle.rs
fourier-new/src/autosort/: butterfly.rs
fourier-new/tests/: integrity.rs
fourier-prof/: Cargo.toml
fourier-prof/src/: main.rs
fourier/src/: bluesteins.rs  fft.rs  lib.rs
fourier/src/autosort/: avx_optimization.rs  butterfly.rs  mod.rs  prime_factor.rs  stage.rs
fourier/src/vector/: avx.rs  generic.rs
fourier/tests/: generate.py  integrity.rs  vectors.rs
fourier/tests/vectors/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  134.json  (+217 more)
src/: fft.rs  lib.rs  radix.rs
src/operations/: mod.rs  radix2.rs  radix3.rs
src/radix/: mod.rs  radix2.rs  radix3.rs
tests/: generate.py  vectors.rs
tests/vectors/: 108.json  18.json  256.json  27.json  32.json  4.json  54.json  6.json  72.json  81.json  generate_tests.rs
