[package]
name = "fft"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
edition = "2018"

[dependencies]
num-traits = "0.2"
num-complex = "0.2"
multiversion = { version = "0.2", path = "../../multiversion" }

[dev-dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
num-complex = { version = "0.2", features = ["serde"] }
