[package]
name = "fourier-algorithms"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Helper functions for the Fourier crate"
repository = "https://github.com/calebzulawski/fourier"
categories = ["algorithms", "mathematics", "multimedia::audio", "science"]
readme = "README.md"
edition = "2018"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**/*.rs",
    "/tests/**/*.json",
]
keywords = ["fft", "fourier", "transform"]

[features]
default = ["std"]
std = ["multiversion/std", "num-traits/std", "generic-simd/std"]
alloc = ["generic-simd/alloc"]

[dependencies]
multiversion = { version = "0.6", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
num-complex = { version = "0.3", default-features = false }
generic-simd = { version = "0.1", default-features = false, features = ["complex"], git = "https://github.com/calebzulawski/generic-simd.git" }
paste = "1"
