[package]
name = "fourier-bench"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
edition = "2018"

[dev-dependencies]
criterion = "0.3"
num = "0.2"
rand = "0.7"
rustfft = "3"
fftw = { version = "0.6", default-features = false, features = ["system"] }
fourier = { path = "../fourier" }

[[bench]]
name = "fft_bench"
harness = false
