[package]
name = "fourier-macros"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Helper macros for the Fourier crate"
repository = "https://github.com/calebzulawski/fourier"
categories = ["algorithms", "mathematics", "multimedia::audio", "science"]
readme = "README.md"
edition = "2018"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**/*.rs",
    "/tests/**/*.json",
]
keywords = ["fft", "fourier", "transform"]

[lib]
proc-macro = true

[features]
default = ["std"]
std = ["fourier-algorithms/std"]

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1"
num-complex = { version = "0.3", default-features = false }
fourier-algorithms = { path = "../fourier-algorithms", version = "0.1.0", default-features = false }
