[package]
name = "fourier-new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4"
num-traits = "0.2"
simd-traits = { git = "https://github.com/calebzulawski/simd-traits" }
simd-complex = { git = "https://github.com/calebzulawski/simd-complex" }
