[package]
name = "fourier-new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
num-complex = "0.4"
num-traits = "0.2"
simd-traits = { git = "https://github.com/calebzulawski/simd-traits" }
simd-complex = { git = "https://github.com/calebzulawski/simd-complex" }

[dev-dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
float-cmp = "0.6"
rand = "0.7"
rand_distr = "0.2"
