[package]
name = "fourier"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Fast Fourier transforms (FFTs)"
repository = "https://github.com/calebzulawski/fourier"
categories = ["algorithms", "mathematics", "multimedia::audio", "science"]
readme = "README.md"
edition = "2018"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**/*.rs",
    "/tests/**/*.json",
]
keywords = ["fft", "fourier", "transform"]

[features]
default = ["std"]
std = ["multiversion/runtime_dispatch", "num-traits/std"]
alloc = []

[dependencies]
multiversion = { git = "http://github.com/calebzulawski/multiversion", version = "0.3", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
num-complex = { version = "0.2", default-features = false }

[dev-dependencies]
float-cmp = "0.6"
rand = "0.7"
rand_distr = "0.2"
