[package]
name = "fourier"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Fast Fourier transforms (FFTs)"
repository = "https://github.com/calebzulawski/fourier"
categories = ["algorithms", "mathematics", "multimedia::audio", "science"]
readme = "README.md"
edition = "2018"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**/*.rs",
    "/tests/**/*.json",
]
keywords = ["fft", "fourier", "transform"]

[dependencies]
num-traits = "0.2"
num-complex = "0.2"
multiversion = "0.3"

[dev-dependencies]
float-cmp = "0.6"
rand = "0.7"
rand_distr = "0.2"
